Update Key Vault access steps in workflow
Removed debug step for listing secrets and added a manual fetch test for the `db-password-kv` secret. The existing secret fetching step remains unchanged.

--- a/.github/workflows/ci_cd_deploy_workflow.yml
+++ b/.github/workflows/ci_cd_deploy_workflow.yml
@@ -50,6 +50,10 @@ jobs:
       - name: 🧪 Debug Key Vault Access
         run: az keyvault secret list --vault-name $KEYVAULT_NAME
 
+      - name: 🔍 Manual fetch test
+        run: |
+          az keyvault secret show --vault-name $KEYVAULT_NAME --name db-password-kv
+
       - name: 🔑 Fetch secrets from Azure Key Vault
         id: fetch-secrets
         uses: azure/get-keyvault-secrets@v1
