Update secrets format in Azure Key Vault step
Refactor the `secrets` input in `ci_cd_deploy_workflow.yml`
to use a single-line comma-separated format instead of
the previous multi-line format. This change simplifies
the specification of secrets, consolidating them to
`dbpasswordkv,cachepasswordkv`.

--- a/.github/workflows/ci_cd_deploy_workflow.yml
+++ b/.github/workflows/ci_cd_deploy_workflow.yml
@@ -52,9 +52,7 @@ jobs:
         uses: azure/get-keyvault-secrets@v1
         with:
           keyvault: ${{ env.KEYVAULT_NAME }}
-          secrets: |
-            dbpasswordkv
-            cachepasswordkv
+          secrets: dbpasswordkv,cachepasswordkv
         env:
           AZURE_CLIENT_ID: ${{ fromJson(secrets.AZURE_CREDENTIALS).clientId }}
           AZURE_TENANT_ID: ${{ fromJson(secrets.AZURE_CREDENTIALS).tenantId }}
