--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -7,11 +7,11 @@ services:
       - DOTNET_USE_POLLING_FILE_WATCHER=1
       - DB_HOST=tc-cloudgames-db
       - DB_PORT=5432
-      - DB_NAME=tc_cloud_games
-      - DB_USER=postgres
-      - DB_PASSWORD=postgres
-      - CACHE_HOST=tc-cloudgames-redis
-      - CACHE_PORT=6379
+      #- DB_NAME=tc_cloud_games
+      #- DB_USER=postgres
+      #- DB_PASSWORD=postgres
+      #- CACHE_HOST=tc-cloudgames-redis
+      #- CACHE_PORT=6379
       - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx
       - ASPNETCORE_Kestrel__Certificates__Default__Password=SecurePassword123!
     ports:
