Enhance CI/CD workflow and add OpenTelemetry support
Updated `ci_cd_deploy_workflow.yml` to include the new `opentlkv` secret and added `OPENTL_PASSWORD` to environment variables. Modified `docker-compose.yml` to use a placeholder for `OTEL_EXPORTER_OTLP_HEADERS` for improved security. Restructured `Dockerfile` to introduce a new stage for OpenTelemetry auto-instrumentation, ensuring the application is properly instrumented at runtime.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       - DOTNET_USE_POLLING_FILE_WATCHER=1
       - OTEL_EXPORTER_OTLP_ENDPOINT=https://otlp-gateway-prod-sa-east-1.grafana.net/otlp
       - OTEL_EXPORTER_OTLP_PROTOCOL=http/protobuf
-      - OTEL_EXPORTER_OTLP_HEADERS=Authorization=Basic MTMxMDA1MjpnbGNfZXlKdklqb2lNVFEzTnpJek9TSXNJbTRpT2lKMFkyTnNiM1ZrWjJGdFpYTXRaM0poWm1GdVlTMTBiMnRsYmlJc0ltc2lPaUpzTVRFd01qVTJZMjVUY21STmN6ZHNOVGhpZVZOMU1FVWlMQ0p0SWpwN0luSWlPaUp3Y205a0xYTmhMV1ZoYzNRdE1TSjlmUT09
+      - OTEL_EXPORTER_OTLP_HEADERS=Authorization=Basic <basic-value>
       - OTEL_RESOURCE_ATTRIBUTES=service.name=tccloudgames-app,service.namespace=tccloudgames-app-group,deployment.environment=development
       
   tc-cloudgames-db:
