--- a/.github/workflows/ci_cd_deploy_workflow.yml
+++ b/.github/workflows/ci_cd_deploy_workflow.yml
@@ -52,7 +52,7 @@ jobs:
         uses: azure/get-keyvault-secrets@v1
         with:
           keyvault: ${{ env.KEYVAULT_NAME }}
-          secrets: dbpasswordkv,cachepasswordkv
+          secrets: dbpasswordkv,cachepasswordkv,opentlkv
         env:
           AZURE_CLIENT_ID: ${{ fromJson(secrets.AZURE_CREDENTIALS).clientId }}
           AZURE_TENANT_ID: ${{ fromJson(secrets.AZURE_CREDENTIALS).tenantId }}
@@ -62,6 +62,7 @@ jobs:
         env:
           DB_PASSWORD: ${{ steps.fetch-secrets.outputs.dbpasswordkv }}
           CACHE_PASSWORD: ${{ steps.fetch-secrets.outputs.cachepasswordkv }}
+          OPENTL_PASSWORD: ${{ steps.fetch-secrets.outputs.opentlkv }}
         run: |
           echo "Secrets fetched:"
           echo "DB_PASSWORD length: ${#DB_PASSWORD}"
@@ -70,7 +71,7 @@ jobs:
           az containerapp secret set \
             --name "$CONTAINER_APP_NAME" \
             --resource-group "$RESOURCE_GROUP" \
-            --secrets db-password-secret="$DB_PASSWORD" cache-password-secret="$CACHE_PASSWORD"
+            --secrets db-password-secret="$DB_PASSWORD" cache-password-secret="$CACHE_PASSWORD" opentl-password-secret="$OPENTL_PASSWORD"
 
       - name: 🐳 Login to ACR
         uses: docker/login-action@v3
@@ -104,6 +105,10 @@ jobs:
             CACHE_HOST=${{ secrets.AZURE_CACHE_HOST }}
             CACHE_PORT=${{ secrets.AZURE_CACHE_PORT }}
             CACHE_PASSWORD=secretref:cache-password-secret
+            OTEL_EXPORTER_OTLP_ENDPOINT=https://otlp-gateway-prod-sa-east-1.grafana.net/otlp
+            OTEL_EXPORTER_OTLP_PROTOCOL=http/protobuf
+            OTEL_EXPORTER_OTLP_HEADERS=Authorization=Basic secretref:opentl-password-secret
+            OTEL_RESOURCE_ATTRIBUTES=service.name=tccloudgames-app,service.namespace=tccloudgames-app-group,deployment.environment=development
 
       - name: 📦 Output deployed image tag
         run: |
