--- a/.github/workflows/ci_cd_deploy_workflow.yml
+++ b/.github/workflows/ci_cd_deploy_workflow.yml
@@ -108,7 +108,7 @@ jobs:
             OTEL_EXPORTER_OTLP_ENDPOINT=https://otlp-gateway-prod-sa-east-1.grafana.net/otlp
             OTEL_EXPORTER_OTLP_PROTOCOL=http/protobuf
             OTEL_EXPORTER_OTLP_HEADERS=Authorization=Basic secretref:opentl-password-secret
-            #OTEL_RESOURCE_ATTRIBUTES=service.name=tccloudgames-app,service.namespace=tccloudgames-app-group,deployment.environment=development
+            OTEL_RESOURCE_ATTRIBUTES="service.name=tccloudgames-app,service.namespace=tccloudgames-app-group,deployment.environment=development"
 
       - name: 📦 Output deployed image tag
         run: |
