Refactor OTEL headers and remove image tag output
Updated `OTEL_EXPORTER_OTLP_HEADERS` in `ci_cd_deploy_workflow.yml` to simplify configuration by removing the "Authorization" key. Also removed the line that outputs the deployed image tag from the workflow.

--- a/.github/workflows/ci_cd_deploy_workflow.yml
+++ b/.github/workflows/ci_cd_deploy_workflow.yml
@@ -107,7 +107,7 @@ jobs:
             CACHE_PASSWORD=secretref:cache-password-secret
             OTEL_EXPORTER_OTLP_ENDPOINT=https://otlp-gateway-prod-sa-east-1.grafana.net/otlp
             OTEL_EXPORTER_OTLP_PROTOCOL=http/protobuf
-            OTEL_EXPORTER_OTLP_HEADERS="Authorization=Basic secretref:opentl-password-secret"
+            OTEL_EXPORTER_OTLP_HEADERS=secretref:opentl-password-secret
             OTEL_RESOURCE_ATTRIBUTES="service.name=tccloudgames-app,service.namespace=tccloudgames-app-group,deployment.environment=development"
 
       - name: 📦 Output deployed image tag
