--- a/.github/workflows/ci_cd_deploy_workflow.yml
+++ b/.github/workflows/ci_cd_deploy_workflow.yml
@@ -9,6 +9,7 @@ on:
 env:
   ACR_NAME: tccloudgamesregistry
   CONTAINER_APP_NAME: tc-cloudgames-api-container-app
+  GRAFANA_AGENT_NAME: grafana-agent
   RESOURCE_GROUP: tc-cloudgames-rg
   IMAGE_TAG: ${{ github.sha }}
   KEYVAULT_NAME: tc-cloudgames-kv
@@ -52,7 +53,7 @@ jobs:
         uses: azure/get-keyvault-secrets@v1
         with:
           keyvault: ${{ env.KEYVAULT_NAME }}
-          secrets: dbpasswordkv,cachepasswordkv,opentlkv
+          secrets: dbpasswordkv,cachepasswordkv,opentlkv,grafanaapitokenkv
         env:
           AZURE_CLIENT_ID: ${{ fromJson(secrets.AZURE_CREDENTIALS).clientId }}
           AZURE_TENANT_ID: ${{ fromJson(secrets.AZURE_CREDENTIALS).tenantId }}
@@ -63,15 +64,12 @@ jobs:
           DB_PASSWORD: ${{ steps.fetch-secrets.outputs.dbpasswordkv }}
           CACHE_PASSWORD: ${{ steps.fetch-secrets.outputs.cachepasswordkv }}
           OPENTL_PASSWORD: ${{ steps.fetch-secrets.outputs.opentlkv }}
+          GRAFANA_API_TOKEN: ${{ steps.fetch-secrets.outputs.grafanaapitokenkv }}
         run: |
-          echo "Secrets fetched:"
-          echo "DB_PASSWORD length: ${#DB_PASSWORD}"
-          echo "CACHE_PASSWORD length: ${#CACHE_PASSWORD}"
-          
           az containerapp secret set \
             --name "$CONTAINER_APP_NAME" \
             --resource-group "$RESOURCE_GROUP" \
-            --secrets db-password-secret="$DB_PASSWORD" cache-password-secret="$CACHE_PASSWORD" opentl-password-secret="$OPENTL_PASSWORD"
+            --secrets db-password-secret="$DB_PASSWORD" cache-password-secret="$CACHE_PASSWORD" opentl-password-secret="$OPENTL_PASSWORD grafana-api-token-secret="$GRAFANA_API_TOKEN"
 
       - name: 🐳 Login to ACR
         uses: docker/login-action@v3
@@ -83,33 +81,56 @@ jobs:
       - name: ⚙️ Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: ⚙️ Build and push Docker image
+      - name: ⚙️ Build and push API Docker image
         run: |
           docker build -f ./src/TC.CloudGames.Api/Dockerfile -t $ACR_NAME.azurecr.io/$CONTAINER_APP_NAME:$IMAGE_TAG .
           docker push $ACR_NAME.azurecr.io/$CONTAINER_APP_NAME:$IMAGE_TAG
 
-      - name: 🚀 Deploy to Azure Container App
+      - name: ⚙️ Build and push Grafana Agent sidecar image
+        run: |
+          docker build -t $ACR_NAME.azurecr.io/$GRAFANA_AGENT_NAME:$IMAGE_TAG ./grafana-agent
+          docker push $ACR_NAME.azurecr.io/$GRAFANA_AGENT_NAME:$IMAGE_TAG
+
+      - name: 🚀 Deploy both containers to Azure Container App
         uses: azure/container-apps-deploy-action@v2
         with:
           acrName: ${{ env.ACR_NAME }}
           containerAppName: ${{ env.CONTAINER_APP_NAME }}
           resourceGroup: ${{ env.RESOURCE_GROUP }}
-          imageToDeploy: ${{ env.ACR_NAME }}.azurecr.io/${{ env.CONTAINER_APP_NAME }}:${{ env.IMAGE_TAG }}
-          environmentVariables: >
-            ASPNETCORE_ENVIRONMENT=Development
-            DB_HOST=${{ secrets.AZURE_DB_HOST }}
-            DB_PORT=${{ secrets.AZURE_DB_PORT }}
-            DB_NAME=${{ secrets.AZURE_DB_NAME }}
-            DB_USER=${{ secrets.AZURE_DB_USER }}
-            DB_PASSWORD=secretref:db-password-secret
-            CACHE_HOST=${{ secrets.AZURE_CACHE_HOST }}
-            CACHE_PORT=${{ secrets.AZURE_CACHE_PORT }}
-            CACHE_PASSWORD=secretref:cache-password-secret
-            OTEL_EXPORTER_OTLP_ENDPOINT=https://otlp-gateway-prod-sa-east-1.grafana.net/otlp
-            OTEL_EXPORTER_OTLP_PROTOCOL=http/protobuf
-            OTEL_EXPORTER_OTLP_HEADERS=secretref:opentl-password-secret
-            OTEL_RESOURCE_ATTRIBUTES="service.name=tccloudgames-app,service.namespace=tccloudgames-app-group,deployment.environment=development"
+          containers: |
+            [
+              {
+                "name": "app",
+                "image": "${{ env.ACR_NAME }}.azurecr.io/${{ env.CONTAINER_APP_NAME }}:${{ env.IMAGE_TAG }}",
+                "env": [
+                  { "name": "ASPNETCORE_ENVIRONMENT", "value": "Development" },
+                  { "name": "DB_HOST", "value": "${{ secrets.AZURE_DB_HOST }}" },
+                  { "name": "DB_PORT", "value": "${{ secrets.AZURE_DB_PORT }}" },
+                  { "name": "DB_NAME", "value": "${{ secrets.AZURE_DB_NAME }}" },
+                  { "name": "DB_USER", "value": "${{ secrets.AZURE_DB_USER }}" },
+                  { "name": "DB_PASSWORD", "value": "secretref:db-password-secret" },
+                  { "name": "CACHE_HOST", "value": "${{ secrets.AZURE_CACHE_HOST }}" },
+                  { "name": "CACHE_PORT", "value": "${{ secrets.AZURE_CACHE_PORT }}" },
+                  { "name": "CACHE_PASSWORD", "value": "secretref:cache-password-secret" },
+                  { "name": "OTEL_EXPORTER_OTLP_ENDPOINT", "value": "https://otlp-gateway-prod-sa-east-1.grafana.net/otlp" },
+                  { "name": "OTEL_EXPORTER_OTLP_PROTOCOL", "value": "http/protobuf" },
+                  { "name": "OTEL_EXPORTER_OTLP_HEADERS", "value": "secretref:opentl-password-secret" }
+                  #{ "name": "OTEL_RESOURCE_ATTRIBUTES", "value": "service.name=tccloudgames-app,service.namespace=tccloudgames-app-group,deployment.environment=development" }
+                ]
+              },
+              {
+                "name": "grafana-agent",
+                "image": "${{ env.ACR_NAME }}.azurecr.io/${{ env.GRAFANA_AGENT_NAME }}:${{ env.IMAGE_TAG }}",
+                "env": [
+                  {
+                    "name": "GRAFANA_API_TOKEN",
+                    "value": "secretref:grafana-api-token-secret"
+                  }
+                ]
+              }
+            ]
 
-      - name: 📦 Output deployed image tag
+      - name: 📦 Output deployed image tags
         run: |
-          echo "Deployed image: $ACR_NAME.azurecr.io/$CONTAINER_APP_NAME:$IMAGE_TAG"
+          echo "App image: $ACR_NAME.azurecr.io/$CONTAINER_APP_NAME:$IMAGE_TAG"
+          echo "Grafana Agent image: $ACR_NAME.azurecr.io/$GRAFANA_AGENT_NAME:$IMAGE_TAG"
