--- a/.github/workflows/ci_cd_deploy_workflow.yml
+++ b/.github/workflows/ci_cd_deploy_workflow.yml
@@ -69,7 +69,7 @@ jobs:
           az containerapp secret set \
             --name "$CONTAINER_APP_NAME" \
             --resource-group "$RESOURCE_GROUP" \
-            --secrets db-password-secret="$DB_PASSWORD" cache-password-secret="$CACHE_PASSWORD" opentl-password-secret="$OPENTL_PASSWORD grafana-api-token-secret="$GRAFANA_API_TOKEN"
+            --secrets db-password-secret="$DB_PASSWORD" cache-password-secret="$CACHE_PASSWORD" opentl-password-secret="$OPENTL_PASSWORD" grafana-api-token-secret="$GRAFANA_API_TOKEN"
 
       - name: 🐳 Login to ACR
         uses: docker/login-action@v3
