Enhance CI/CD workflow and improve security measures
Updated the CI/CD workflow to streamline deployment processes and manage secrets more effectively. Added environment variables for the Grafana agent in `docker-compose.yml` and removed the Grafana agent setup from the `Dockerfile`. Enhanced security by using secret references in `agent-config.yaml` and `containerapp.yaml`. Adjusted sensitive data masking in `SerilogExtensions.cs` and commented out OpenTelemetry logging configurations in `ServiceCollectionExtensions.cs`. Added a new Grafana Loki sink in `appsettings.Development.json` for improved logging and monitoring.

--- a/src/TC.CloudGames.Api/appsettings.Development.json
+++ b/src/TC.CloudGames.Api/appsettings.Development.json
@@ -15,7 +15,8 @@
   "Serilog": {
     "Using": [
       "Serilog.Sinks.Console",
-      "Serilog.Sinks.Seq"
+      "Serilog.Sinks.Seq",
+      "Serilog.Sinks.Grafana.Loki"
     ],
     "MinimumLevel": {
       "Default": "Debug",
@@ -31,6 +32,26 @@
         "Name": "Seq",
         "Args": {
           "serverUrl": "http://tc-cloudgames-seq:5341"
+        }
+      },
+      {
+        "Name": "GrafanaLoki",
+        "Args": {
+          "uri": "https://logs-prod-024.grafana.net/loki/api/v1/push",
+          "credentials": {
+            "username": "1267846",
+            "password": "%GRAFANA_API_TOKEN%"
+          },
+          "labels": [
+            {
+              "name": "app",
+              "value": "tccloudgames-app"
+            },
+            {
+              "name": "env",
+              "value": "%ASPNETCORE_ENVIRONMENT%"
+            }
+          ]
         }
       }
     ],
