--- a/.github/workflows/ci_cd_deploy_workflow.yml
+++ b/.github/workflows/ci_cd_deploy_workflow.yml
@@ -9,7 +9,6 @@ on:
 env:
   ACR_NAME: tccloudgamesregistry
   CONTAINER_APP_NAME: tc-cloudgames-api-container-app
-  GRAFANA_AGENT_NAME: grafana-agent
   RESOURCE_GROUP: tc-cloudgames-rg
   IMAGE_TAG: ${{ github.sha }}
   KEYVAULT_NAME: tc-cloudgames-kv
@@ -65,7 +64,7 @@ jobs:
           CACHE_PASSWORD: ${{ steps.fetch-secrets.outputs.cachepasswordkv }}
           OPENTL_PASSWORD: ${{ steps.fetch-secrets.outputs.opentlkv }}
           GRAFANA_API_TOKEN: ${{ steps.fetch-secrets.outputs.grafanaapitokenkv }}
-        run: |
+        run: |          
           az containerapp secret set \
             --name "$CONTAINER_APP_NAME" \
             --resource-group "$RESOURCE_GROUP" \
@@ -81,24 +80,34 @@ jobs:
       - name: ⚙️ Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: ⚙️ Build and push API Docker image
+      - name: ⚙️ Build and push Docker image
         run: |
           docker build -f ./src/TC.CloudGames.Api/Dockerfile -t $ACR_NAME.azurecr.io/$CONTAINER_APP_NAME:$IMAGE_TAG .
           docker push $ACR_NAME.azurecr.io/$CONTAINER_APP_NAME:$IMAGE_TAG
 
-      - name: ⚙️ Build and push Grafana Agent sidecar image
-        run: |
-          docker build -t $ACR_NAME.azurecr.io/$GRAFANA_AGENT_NAME:$IMAGE_TAG ./grafana-agent
-          docker push $ACR_NAME.azurecr.io/$GRAFANA_AGENT_NAME:$IMAGE_TAG
-
-      - name: 🚀 Deploy both containers to Azure Container App
+      - name: 🚀 Deploy to Azure Container App
         uses: azure/container-apps-deploy-action@v2
         with:
+          acrName: ${{ env.ACR_NAME }}
           containerAppName: ${{ env.CONTAINER_APP_NAME }}
           resourceGroup: ${{ env.RESOURCE_GROUP }}
-          yamlConfigPath: infra/containerapp.yaml
+          imageToDeploy: ${{ env.ACR_NAME }}.azurecr.io/${{ env.CONTAINER_APP_NAME }}:${{ env.IMAGE_TAG }}
+          environmentVariables: >
+            ASPNETCORE_ENVIRONMENT=Development
+            DB_HOST=${{ secrets.AZURE_DB_HOST }}
+            DB_PORT=${{ secrets.AZURE_DB_PORT }}
+            DB_NAME=${{ secrets.AZURE_DB_NAME }}
+            DB_USER=${{ secrets.AZURE_DB_USER }}
+            DB_PASSWORD=secretref:db-password-secret
+            CACHE_HOST=${{ secrets.AZURE_CACHE_HOST }}
+            CACHE_PORT=${{ secrets.AZURE_CACHE_PORT }}
+            CACHE_PASSWORD=secretref:cache-password-secret
+            OTEL_EXPORTER_OTLP_ENDPOINT=https://otlp-gateway-prod-sa-east-1.grafana.net/otlp
+            OTEL_EXPORTER_OTLP_PROTOCOL=http/protobuf
+            OTEL_EXPORTER_OTLP_HEADERS=secretref:opentl-password-secret
+            GRAFANA_API_TOKEN=secretref:grafana-api-token-secret
+            #OTEL_RESOURCE_ATTRIBUTES="service.name=tccloudgames-app,service.namespace=tccloudgames-app-group,deployment.environment=development"
 
-      - name: 📦 Output deployed image tags
+      - name: 📦 Output deployed image tag
         run: |
-          echo "App image: $ACR_NAME.azurecr.io/$CONTAINER_APP_NAME:$IMAGE_TAG"
-          echo "Grafana Agent image: $ACR_NAME.azurecr.io/$GRAFANA_AGENT_NAME:$IMAGE_TAG"
+          echo "Deployed image: $ACR_NAME.azurecr.io/$CONTAINER_APP_NAME:$IMAGE_TAG"
