Update placeholder formats in appsettings.Development.json
Changed password and environment label placeholders to use
the new syntax for better compatibility and consistency.

--- a/src/TC.CloudGames.Api/appsettings.Development.json
+++ b/src/TC.CloudGames.Api/appsettings.Development.json
@@ -40,7 +40,7 @@
           "uri": "https://logs-prod-024.grafana.net/loki/api/v1/push",
           "credentials": {
             "username": "1267846",
-            "password": "%GRAFANA_API_TOKEN%"
+            "password": "${GRAFANA_API_TOKEN}"
           },
           "labels": [
             {
@@ -49,7 +49,7 @@
             },
             {
               "name": "env",
-              "value": "%ASPNETCORE_ENVIRONMENT%"
+              "value": "%{ASPNETCORE_ENVIRONMENT}%"
             }
           ]
         }
