Add Grafana Loki logging support
Updated `SerilogExtensions.cs` to include a new configuration parameter `GrafanaLokiUrl` and added a sink for Grafana Loki to the logger configuration. Ensured that the `GrafanaLokiUrl` is validated for null or empty values.

Modified `appsettings.Development.json` to include the new `GrafanaLokiUrl` entry and updated the Serilog configuration to support the Grafana Loki sink while retaining existing sinks for Console and Seq.

--- a/src/TC.CloudGames.Api/appsettings.Development.json
+++ b/src/TC.CloudGames.Api/appsettings.Development.json
@@ -12,11 +12,10 @@
     "User": "postgres",
     "Password": "postgres"
   },
+  "GrafanaLokiUrl": "https://logs-prod-024.grafana.net/loki/api/v1/push",
   "Serilog": {
     "Using": [
-      "Serilog.Sinks.Console",
-      "Serilog.Sinks.Seq",
-      "Serilog.Sinks.Grafana.Loki"
+      "Serilog.Sinks.Console"
     ],
     "MinimumLevel": {
       "Default": "Debug",
