Remove Grafana Loki configuration and enhance logging
- Added `OTEL_RESOURCE_ATTRIBUTES` to `ci_cd_deploy_workflow.yml` for OpenTelemetry configuration.
- Removed Grafana Loki logging setup from `SerilogExtensions.cs`.
- Added test log statement for Grafana Loki in `Program.cs`.
- Updated database port in `appsettings.Development.json` and removed `GrafanaLokiUrl`.
- Removed `GrafanaLokiUrl` from `appsettings.Testing.json`.
- Enhanced logging in `CommandPostProcessor.cs` for better observability of request processing.

--- a/.github/workflows/ci_cd_deploy_workflow.yml
+++ b/.github/workflows/ci_cd_deploy_workflow.yml
@@ -106,6 +106,7 @@ jobs:
             OTEL_EXPORTER_OTLP_PROTOCOL=http/protobuf
             OTEL_EXPORTER_OTLP_HEADERS=secretref:opentl-password-secret
             GRAFANA_API_TOKEN=secretref:grafana-api-token-secret
+            OTEL_RESOURCE_ATTRIBUTES="service.name=tccloudgames-app,service.namespace=tccloudgames-app-group,deployment.environment=development"
 
       - name: 📦 Output deployed image tag
         run: |
