--- a/src/TC.CloudGames.Api/appsettings.Development.json
+++ b/src/TC.CloudGames.Api/appsettings.Development.json
@@ -7,15 +7,15 @@
   },
   "Database": {
     "Host": "localhost",
-    "Port": "54320",
+    "Port": "54321",
     "Name": "tc_cloud_games",
     "User": "postgres",
     "Password": "postgres"
   },
-  "GrafanaLokiUrl": "https://logs-prod-024.grafana.net/loki/api/v1/push",
   "Serilog": {
     "Using": [
-      "Serilog.Sinks.Console"
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.Grafana.Loki"
     ],
     "MinimumLevel": {
       "Default": "Debug",
@@ -39,17 +39,11 @@
           "uri": "https://logs-prod-024.grafana.net/loki/api/v1/push",
           "credentials": {
             "username": "1267846",
-            "password": "${GRAFANA_API_TOKEN}"
+            "password": "%GRAFANA_API_TOKEN%"
           },
           "labels": [
-            {
-              "name": "app",
-              "value": "tccloudgames-app"
-            },
-            {
-              "name": "env",
-              "value": "%{ASPNETCORE_ENVIRONMENT}%"
-            }
+            { "name": "app", "value": "tccloudgames-app" },
+            { "name": "env", "value": "%ASPNETCORE_ENVIRONMENT%" }
           ]
         }
       }
