Enhance Serilog configuration and timezone handling
Updated `SerilogExtensions.cs` to include timezone handling and sensitive data masking. Simplified logger configuration for clarity.

Modified `appsettings.Development.json` to add enrichers for thread and environment, and improved JSON formatting for consistency.

--- a/src/TC.CloudGames.Api/appsettings.Development.json
+++ b/src/TC.CloudGames.Api/appsettings.Development.json
@@ -15,7 +15,9 @@
   "Serilog": {
     "Using": [
       "Serilog.Sinks.Console",
-      "Serilog.Sinks.Grafana.Loki"
+      "Serilog.Sinks.Grafana.Loki",
+      "Serilog.Enrichers.Thread",
+      "Serilog.Enrichers.Environment"
     ],
     "MinimumLevel": {
       "Default": "Debug",
@@ -24,14 +26,10 @@
       }
     },
     "WriteTo": [
-      {
-        "Name": "Console"
-      },
+      { "Name": "Console" },
       {
         "Name": "Seq",
-        "Args": {
-          "serverUrl": "http://tc-cloudgames-seq:5341"
-        }
+        "Args": { "serverUrl": "http://tc-cloudgames-seq:5341" }
       },
       {
         "Name": "GrafanaLoki",
@@ -42,8 +40,14 @@
             "password": "%GRAFANA_API_TOKEN%"
           },
           "labels": [
-            { "name": "app", "value": "tccloudgames-app" },
-            { "name": "env", "value": "%ASPNETCORE_ENVIRONMENT%" }
+            {
+              "name": "app",
+              "value": "tccloudgames-app"
+            },
+            {
+              "name": "env",
+              "value": "%ASPNETCORE_ENVIRONMENT%"
+            }
           ]
         }
       }
