Refactor Serilog configuration in appsettings
Removed unnecessary sinks and enrichers from the
`appsettings.Development.json` file, retaining only
essential entries for a more streamlined logging setup.

--- a/src/TC.CloudGames.Api/appsettings.Development.json
+++ b/src/TC.CloudGames.Api/appsettings.Development.json
@@ -15,9 +15,7 @@
   "Serilog": {
     "Using": [
       "Serilog.Sinks.Console",
-      "Serilog.Sinks.Grafana.Loki",
-      "Serilog.Enrichers.Thread",
-      "Serilog.Enrichers.Environment"
+      "Serilog.Sinks.Grafana.Loki"
     ],
     "MinimumLevel": {
       "Default": "Debug",
