Enhance logging and application startup process
- Enabled Serilog's self-logging to the console in Program.cs.
- Added log message for Grafana Loki.
- Updated application to run asynchronously after migrations and data seeding.
- Modified "TimeZone" entry in appsettings.json for correct formatting.
- Introduced a new "Logging" section with detailed log levels for better traceability.

--- a/src/TC.CloudGames.Api/appsettings.json
+++ b/src/TC.CloudGames.Api/appsettings.json
@@ -1,5 +1,11 @@
 {
   "AllowedHosts": "*",
   //"TimeZone2": "E. South America Standard Time",
-  "TimeZone": "America/Sao_Paulo"
+  "TimeZone": "America/Sao_Paulo",
+  "Logging": {
+    "LogLevel": {
+      "Default": "Debug",
+      "System.Net.Http.HttpClient": "Trace"
+    }
+  }
 }
