--- a/src/TC.CloudGames.Api/TC.CloudGames.Api.csproj
+++ b/src/TC.CloudGames.Api/TC.CloudGames.Api.csproj
@@ -12,6 +12,7 @@
         <PackageReference Include="AspNetCore.HealthChecks.NpgSql" Version="9.0.0" />
         <PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="9.0.0" />
         <PackageReference Include="Bogus" Version="35.6.3" />
+        <PackageReference Include="DotNetEnv" Version="3.1.1" />
         <PackageReference Include="FastEndpoints" Version="6.2.0" />
         <PackageReference Include="FastEndpoints.Swagger" Version="6.2.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.6" />
