--- a/src/TC.CloudGames.Api/appsettings.Development.json
+++ b/src/TC.CloudGames.Api/appsettings.Development.json
@@ -25,10 +25,10 @@
     },
     "WriteTo": [
       { "Name": "Console" },
-      {
-        "Name": "Seq",
-        "Args": { "serverUrl": "http://tc-cloudgames-seq:5341" }
-      },
+      //{
+      //  "Name": "Seq",
+      //  "Args": { "serverUrl": "http://tc-cloudgames-seq:5341" }
+      //},
       {
         "Name": "GrafanaLoki",
         "Args": {
