--- a/src/TC.CloudGames.Api/Dockerfile
+++ b/src/TC.CloudGames.Api/Dockerfile
@@ -4,6 +4,9 @@ WORKDIR /app
 EXPOSE 8080
 EXPOSE 8081
 
+# Copy .solution-root to /app
+COPY .solution-root .solution-root
+
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
