Update GrafanaLoki URI configuration
Modified the `uri` field in the `GrafanaLoki` configuration from
"https://logs-prod-024.grafana.net/loki/api/v1/push" to
"https://logs-prod-024.grafana.net". This change simplifies the
endpoint used for logging with the Grafana Loki service.

--- a/src/TC.CloudGames.Api/appsettings.Development.json
+++ b/src/TC.CloudGames.Api/appsettings.Development.json
@@ -32,7 +32,7 @@
       {
         "Name": "GrafanaLoki",
         "Args": {
-          "uri": "https://logs-prod-024.grafana.net/loki/api/v1/push",
+          "uri": "https://logs-prod-024.grafana.net",
           "credentials": {
             "username": "1267846",
             "password": "%GRAFANA_API_TOKEN%"
