--- a/src/TC.CloudGames.Api/appsettings.Development.json
+++ b/src/TC.CloudGames.Api/appsettings.Development.json
@@ -24,7 +24,9 @@
       }
     },
     "WriteTo": [
-      { "Name": "Console" },
+      {
+        "Name": "Console"
+      },
       //{
       //  "Name": "Seq",
       //  "Args": { "serverUrl": "http://tc-cloudgames-seq:5341" }
@@ -36,7 +38,17 @@
           "credentials": {
             "username": "1267846",
             "password": "%GRAFANA_API_TOKEN%"
-          }
+          },
+          "labels": [
+            {
+              "key": "app",
+              "value": "tccloudgames-app"
+            },
+            {
+              "key": "env",
+              "value": "%ASPNETCORE_ENVIRONMENT%"
+            }
+          ]
         }
       }
     ],
