Add Grafana Loki logging support
Introduce `Serilog.Sinks.Grafana.Loki` for enhanced logging capabilities. Update `SerilogExtensions.cs` to configure Loki logging with necessary URL and credentials. Modify `ServiceCollectionExtensions.cs` to ensure custom logging telemetry is integrated. Update `appsettings.Development.json` to include Grafana Loki sink configuration.

--- a/src/TC.CloudGames.Api/appsettings.Development.json
+++ b/src/TC.CloudGames.Api/appsettings.Development.json
@@ -24,9 +24,7 @@
       }
     },
     "WriteTo": [
-      {
-        "Name": "Console"
-      },
+      { "Name": "Console" },
       //{
       //  "Name": "Seq",
       //  "Args": { "serverUrl": "http://tc-cloudgames-seq:5341" }
@@ -38,17 +36,7 @@
           "credentials": {
             "username": "1267846",
             "password": "%GRAFANA_API_TOKEN%"
-          },
-          "labels": [
-            {
-              "key": "app",
-              "value": "tccloudgames-app"
-            },
-            {
-              "key": "env",
-              "value": "%ASPNETCORE_ENVIRONMENT%"
-            }
-          ]
+          }
         }
       }
     ],
