Update Terraform configuration and .gitignore settings
- Enhance .gitignore to exclude Terraform files and directories.
- Configure Azure provider in main.tf with resource group, key vault, and PostgreSQL server.
- Add output variable for resource group ID in output.tf.
- Introduce new variables for resource group name, location, and tenant ID in variables.tf.

--- a/.gitignore
+++ b/.gitignore
@@ -370,3 +370,23 @@ FodyWeavers.xsd
 .sonarqube
 /.github/_bkp_workflows_bkp
 /.env
+
+# Diretório de plugins, providers e configurações locais
+.terraform/
+
+# Arquivos de estado do Terraform (contêm dados sensíveis!)
+terraform.tfstate
+terraform.tfstate.*
+
+# Arquivos de backup automáticos do Terraform
+*.tfstate.backup
+
+# Variáveis locais (nunca versionar secrets aqui)
+terraform.tfvars
+*.auto.tfvars
+
+# Arquivos de lock (dependem da máquina/local)
+.terraform.lock.hcl
+
+# Scripts de import gerados (como pelo aztfexport)
+import.sh
