Update Key Vault name for consistency in resource naming

--- a/.github/workflows/ci_cd_deploy_workflow.yml
+++ b/.github/workflows/ci_cd_deploy_workflow.yml
@@ -12,7 +12,7 @@ env:
   CREDENTIALS_NAME: MAIN_AZURE_CREDENTIALS
   # Environment-specific configuration
   RESOURCE_GROUP: 'tc-cloudgames-rg'
-  KEYVAULT_NAME: 'tc-cloudgames-kv'
+  KEYVAULT_NAME: 'tccloudgames-dev-kv-92mr'
   # Build configuration
   DOTNET_VERSION: '9.0.x'
   BUILD_CONFIGURATION: 'Release'
